--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
+/public/bundles/easyadmin
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -21,7 +21,6 @@
 
 ###> symfony/asset-mapper ###
 /public/assets/
-/assets/vendor
 ###< symfony/asset-mapper ###
 
 ###> symfony/webpack-encore-bundle ###
