--- a/compose.yaml
+++ b/compose.yaml
@@ -1,33 +1,39 @@
 version: '3.8'
 services:
-  database:
-    image: mysql:8.0
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: googleApi
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-    volumes:
-      - database_data:/var/lib/mysql
-    networks:
-      - dev
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin:latest
-    restart: always
-    environment:
-      PMA_ARBITRARY: 1
-      PMA_HOST: database
-      PMA_USER: root
-      PMA_PASSWORD: root
-    links:
-      - database
+  web:
+    build:
+      context: ./tools/php
+    container_name: web
     ports:
-      - 8080:8080
+      - "8000:8000"
+    volumes:
+      - ./:/var/www
+      - ./apache.conf:/etc/apache2/sites-enabled/000-default.conf
+    restart: always
     networks:
-      - dev
+      - symfony_app
+  db:
+    image: mysql:8.0.32
+    command: --default-authentication-plugin=mysql_native_password
+    volumes:
+      - "db_app:/var/lib/mysql"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - 3306:3306
+    networks:
+      - symfony_app
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080"
+    networks:
+      - symfony_app
 volumes:
-  database_data:
+  db_app:
 networks:
-  dev:
+  symfony_app:
