--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MYSQL_USER=massoud
 MYSQL_PASSWORD=massoud
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://massoud:massoud@db:3306/googleapi?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:root@db:3306/googleapi?serverVersion=8.0.32&charset=utf8mb4"
 #DATABASE_URL="mysql://root:massoud@database:3306/googleapi?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://massoud:massoud@database:3306/googleapi?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
